# samgria

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  pyrightconfig.json  pytest.ini  ruff.toml  setup-from-template.sh
.claude/rules/: trello-board.md
.github/workflows/: ci.yml
PACKAGE_NAME/: __init__.py
docs/: meta-learning.md
docs/superpowers/handovers/: 2026-04-05-meta-learning-handover.md  2026-04-06-meta-optimizer-handover.md
examples/: fewshot_classification.py  inner_regularisation.py  meta_learning_sinusoid.py
samgria/: __init__.py  state.py
samgria/meta/: __init__.py  maml.py  protocol.py  reptile.py  step.py
samgria/transforms/: __init__.py  asam.py  lamp.py  protocol.py  sam.py
samgria/utils/: __init__.py  functional.py  grad.py
scripts/: enable-venv.sh
spikes/jax_second_order/: README.md  pyproject.toml  spike.py
spikes/sam_decomposition/: README.md  diagnose.py  pyproject.toml  sam_impl.py  test_asam_hessian_decomposition.py  test_sam_hessian_decomposition.py
tests/: README.md  test_functional_forward.py  test_state.py
tests/meta/: test_meta_optimizers.py  test_meta_step.py
tests/transforms/: test_transforms.py
