[project]
name = "PACKAGE_NAME"
version = "0.1.0"
description = "PACKAGE_DESCRIPTION"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Ammar Tarajia" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[dependency-groups]
dev = [
    "pyright",
    "pytest",
    "ruff",
    "pre-commit",
    "bandit",
]

[project.urls]
Homepage = "https://github.com/DarkbyteAT/PACKAGE_NAME"
Repository = "https://github.com/DarkbyteAT/PACKAGE_NAME"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
