[project]
name = "samgria"
version = "0.1.0"
description = "Composable gradient transforms for PyTorch — SAM, ASAM, LAMP, and beyond"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Ammar Tarajia" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[dependency-groups]
dev = [
    "pyright",
    "pytest",
    "ruff",
    "pre-commit",
    "bandit",
]

[project.urls]
Homepage = "https://github.com/DarkbyteAT/samgria"
Repository = "https://github.com/DarkbyteAT/samgria"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
